# wot.id

./: .gitignore  README.md
backend/: .env  Cargo.toml
backend/src/: identity_client.rs  main.rs
backend/src/health/: mod.rs
docs/: 01_Project_Overview_And_Principles.md  02_System_Architecture.md  03_IOTA_Node_And_Network.md  04_Backend_And_Identity_Service.md  05_Move_Smart_Contracts.md  06_P2P_Communication.md  07_Trust_Architecture_And_Management.md  08_Frontend_And_User_Experience.md  09_Data_Storage_And_Asset_Management.md  10_Governance_And_Conflict_Resolution.md  11_Security_Standards_Future.md  99_Code_Reviews_And_Edits.md  architecture.md  backend_health.md  iota_node_startup.md  iota_node_technical.md  migration_checklist.md  move_integration.md  tokio_compatibility_solution.md
frontend/: package-lock.json  package.json
frontend/src/app/: AuthSessionProvider.tsx  HealthStatus.tsx  IdentityLookup.tsx  layout.tsx  page.tsx
frontend/src/app/about/: page.tsx
frontend/src/app/about/contribute/: page.tsx
frontend/src/app/api/: wotid.ts
frontend/src/app/api/auth/[...nextauth]/: route.ts
frontend/src/app/api/auth/initiate-challenge/: route.ts
frontend/src/app/components/: ClientLayout.tsx  DappKitProviders.tsx  Footer.tsx  NavBar.tsx
frontend/src/app/legal/: page.tsx
frontend/src/types/: next-auth.d.ts
identity-service/: .env.example  Cargo.toml
identity-service/src/: config.rs  handlers.rs  main.rs  state.rs
move-contracts/: Move.toml
move-contracts/sources/: credentials.move  identity.move  trust.move
principles/: wotid_core_principles.md  wotid_design_principles.md  wotid_technical_design_principles.md
styles/: README.md
