[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
serde = { version = "1.0", features = ["derive"] }
iota-sdk = "1.1.5"

