[package]
name = "identity-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
axum = "0.7.4"  # Compatible with tokio 1.43.0
identity_iota = { version = "1.0.0", features = ["client"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
anyhow = "1.0"
</invoke>
