[package]
name = "identity-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace"] }
axum = "0.7.4"  # Compatible with tokio 1.43.0
iota-sdk = { git = "https://github.com/iotaledger/iota.git", tag = "v0.12.0-rc" } # Aligned with identity_iota_core's usage
identity_iota = { git = "https://github.com/iotaledger/identity.rs", tag = "v1.6.0-beta" } # For IOTA Rebased, uses default features (includes iota-client)
identity_eddsa_verifier = { git = "https://github.com/iotaledger/identity.rs", tag = "v1.6.0-beta", package = "identity_eddsa_verifier" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15.7"
uuid = { version = "1.7.0", features = ["v4"] }

[dev-dependencies]
# Add any development-time dependencies here, e.g., for testing
# Example:
# reqwest = { version = "0.11", features = ["json", "blocking"] }
# tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
